[gd_scene load_steps=2 format=3 uid="uid://24y3c2ijrsn2"]

[ext_resource type="Script" uid="uid://bic83ca2p8tlo" path="res://Script/MainMenu/main_menu.gd" id="1_uqdog"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_uqdog")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewExpeditionButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 842.0
offset_top = 297.0
offset_right = 1089.0
offset_bottom = 443.0
theme_override_font_sizes/font_size = 50
text = "星辰远征"

[node name="NewMainLineButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 842.0
offset_top = 565.0
offset_right = 1089.0
offset_bottom = 711.0
theme_override_font_sizes/font_size = 50
text = "新主线"
